--- a/View/CostumerListView.xaml
+++ b/View/CostumerListView.xaml
@@ -6,7 +6,45 @@
              xmlns:local="clr-namespace:FurnitureStoreApp.View"
              mc:Ignorable="d" 
              d:DesignHeight="520" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Margin="100,0,100,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Customer's List"
+                   Grid.Column="1"
+                   Grid.Row="0"
+                   Style="{StaticResource fontStyle}"/>
+        <DataGrid x:Name="dtGrd"
+                  AutoGenerateColumns="False"
+                  Grid.Row="1"
+                  Grid.Column="1" 
+                  Margin="5,8" 
+                  Padding="3"
+                  Foreground="#5DBEBE"
+                  Background="Transparent"
+                  
+                  ItemsSource="{Binding Path=Purchases, Mode=TwoWay}">
+                <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Name}"/>
+                <DataGridTextColumn Header="Date and time" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Date}" />
+                <DataGridTextColumn Header="Purchase ID" 
+                                    Width="auto"
+                                    Binding="{Binding Path=PurchaseID}" />
+                <DataGridTextColumn Header="Full price"
+                                    Width="auto"
+                                    Binding="{Binding Path=FullPrice}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
