--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -43,8 +43,8 @@
             <Button Command="{Binding Path=addProductCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Product"/>
             <Button Command="{Binding Path=searchCustomerCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Search/Pdf Customer"/>
             <Button Command="{Binding Path=deleteCustomerCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Delete Customer"/>
+            <Button Command="{Binding Path=deletePurchaseCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Delete purchase"/>
             <Button Command="{Binding Path=editProductCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Edit product"/>
-            <Button Command="{Binding Path=editPurchaseCommand}" Height="20" Width="100" HorizontalAlignment="Left" Content="Edit pöcs"/>
         </StackPanel>
     </Border>
 </Window>
